# async-pulse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5ef995cd334d_feat_drop_refresh_token_hash_and_.py  70d631c75e08_add_name_to_user_model.py  80f2ee816ce9_feat_initial_schema_users_and_sessions_.py
docs/: DESIGN.md  LEARNING-ROADMAP.md
docs/architecture/: DESIGN.md  REQUEST_LIFECYCLE_AND_CACHING.md  TABLE_OWNERSHIP_STRATEGY.md  uvicorn_vs_granian.md
docs/database/: FLOW.md  OPERATIONS.md
docs/notes/: database_concepts.md  execution_model.md  python_imports_exports.md  python_vs_fastapi_decorators.md
docs/notes/python/: 01_data_types.md  02_control_flow.md  03_functions.md  04_oop.md  05_exceptions.md  06_modules_packages.md  07_file_io.md  08_comprehensions_generators.md  09_decorators.md  10_context_managers.md  11_concurrency.md  12_standard_library.md  13_best_practices.md  README.md
docs/standards/: CODING_CONVENTIONS.md  TOOLS.md
src/: __init__.py  main.py
src/api/: router.py
src/api/auth/: router.py  service.py
src/api/users/: router.py  service.py
src/config/: database.py  settings.py
src/core/: __init__.py  cache.py  deps.py  exception_handlers.py  exceptions.py  lifespan.py  middleware.py  security.py  settings.py
src/db/: __init__.py  base.py  registry.py  session.py  unit_of_work.py
src/models/: user.py
src/modules/: __init__.py
src/modules/auth/: __init__.py  authentication.py  dependencies.py  entities.py  exceptions.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py  session_revoker.py
src/modules/auth/dependencies/: __init__.py  authentication.py  permissions.py  providers.py
src/modules/users/: __init__.py  dependencies.py  entities.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/schemas/: auth.py  user.py
src/shared/: __init__.py  constants.py  exceptions.py  logger.py  pagination.py  responses.py  schemas.py  security.py
tests/: conftest.py  test_error_handlers.py
tests/modules/: __init__.py
tests/modules/auth/: __init__.py  test_routes.py  test_rtr_and_rbac.py  test_service.py
tests/modules/users/: __init__.py  test_entities.py  test_routes.py  test_service.py
