[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-pulse"
version = "0.1.0"
description = "Modular async backend API with auth & user management"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "pydantic[email]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
